--- a/style.css
+++ b/style.css
@@ -19,3 +19,15 @@ div{
 		background-color:purple;
 		padding:15px;
 }
+
+a:link{
+		color:red;
+		background-color:white;
+}
+
+a:hover{
+		color:red;
+		background-color:gold;
+		font-size:20px;
+}
+
