--- a/style.css
+++ b/style.css
@@ -8,18 +8,16 @@ img{
 
 body{
 		color: cyan;
-}
-
-body{
 		background-color: black;
 }
 
-div{
+#container{
 		margin:25px;
 		background-color:purple;
 		padding:15px;
 		border-radius:30px;
 		text-align:center;
+}
 		
 a:link{
 		color:red;
@@ -35,3 +33,36 @@ a:hover{
 .animepic{
 	height:300px
 }
+
+ul{
+	list-style-position:inside;
+}
+
+#tictactoeboard{
+	border-color:red;
+	width:330px;
+	height:330px;
+	border-style:solid;
+	border-width:5px;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:25px;
+	margin-bottom:25px;
+}
+
+.box{
+	float:left;
+	height:100px;
+	width:100px;
+	border-style:solid;
+	border-width:5px;
+	line-height:100px;
+	border-color:red;
+	vertical-align:middle;
+	font-size:20px;
+	
+}
+
+
+
+
