--- a/style.css
+++ b/style.css
@@ -71,5 +71,15 @@ ul{
 	top:100px;
 	left:100px;
 }
-
+#clickpanel{
+	border-color:purple;
+	width:330px;
+	height:330px;
+	border-style:solid;
+	border-width:5px;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:25px;
+	margin-bottom:25px;
+}
 
