added background wallpaper and opacity white border.

--- a/style.css
+++ b/style.css
@@ -6,14 +6,15 @@ img{
 		width:500px;
 }
 
-body{
-		color: cyan;
-		background-color: black;
+body {
+   background-image: url("http://cdn.playbuzz.com/cdn/1e93312f-6975-46b4-9283-127e93bf2849/e367cb5e-583f-470f-a154-d818a814dfce.png");
+   background-color: #cccccc;
 }
 
 #container{
 		margin:25px;
-		background-color:purple;
+		opacity:0.8;
+		background-color:white;
 		padding:15px;
 		border-radius:30px;
 		text-align:center;
