--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 #container{
-		margin:25px;
+		margin:10px;
 		opacity:0.8;
 		background-color:white;
 		padding:15px;
@@ -88,3 +88,25 @@ ul{
 	height:1000px
 }
 
+#animelist{ 
+	border-color:red;
+	width:1450px;
+	height:5000px;
+	border-style:solid;
+	border-width:5px;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:25px;
+	margin-bottom:25px;
+} 
+
+.box2{
+	float:left;
+	height:750px;
+	width:725px;
+	border-style:solid;
+	border-width:5px;
+	line-height:px;
+	border-color:red;
+	vertical-align:center;
+}
